--- a/src/FSharpNamespacer/FSharpNamespacer.csproj
+++ b/src/FSharpNamespacer/FSharpNamespacer.csproj
@@ -46,10 +46,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Actions\InsertFsModuleAction.cs" />
+    <Compile Include="Actions\InsertFsNamespaceAction.cs" />
     <Compile Include="AsyncModuleSuggestedActionSource.cs" />
-    <Compile Include="ChangeFsModuleNameAction.cs" />
-    <Compile Include="ChangeFsModuleNameActionBase.cs" />
-    <Compile Include="ChangeFsModuleScopeAction.cs" />
+    <Compile Include="Actions\RenameFsScopeNameAction.cs" />
+    <Compile Include="Actions\FsScopeActionBase.cs" />
+    <Compile Include="Actions\ChangeFsScopeAction.cs" />
+    <Compile Include="Models.cs" />
     <Compile Include="ModuleSuggestedActionSourceProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FSharpNamespacerPackage.cs" />
@@ -83,6 +86,7 @@
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.31902.203" ExcludeAssets="runtime" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.0.5234" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
