add FsScope predicates, change action adding logic

--- a/src/FSharpNamespacer/FSharpNamespacer.csproj
+++ b/src/FSharpNamespacer/FSharpNamespacer.csproj
@@ -46,8 +46,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Actions\ChangeToFileModuleAction.cs" />
+    <Compile Include="Actions\ChangeToModuleInsteadNamespaceAction.cs" />
+    <Compile Include="Actions\ChangeToNamespaceAction.cs" />
+    <Compile Include="Actions\ChangeToNamespaceInsteadModuleAction.cs" />
     <Compile Include="Actions\InsertFsModuleAction.cs" />
     <Compile Include="Actions\InsertFsNamespaceAction.cs" />
+    <Compile Include="Actions\RenameToFileModuleAction.cs" />
     <Compile Include="AsyncModuleSuggestedActionSource.cs" />
     <Compile Include="Actions\RenameFsScopeNameAction.cs" />
     <Compile Include="Actions\FsScopeActionBase.cs" />
